base/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-frontend-ts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: pkr5207/todo-frontend-ts:deploy
        imagePullPolicy: Always
        ports:
        - containerPort: 30080
