base/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-frontend-ts
spec:
  type: NodePort
  ports:
  - name: "http-port"
    port: 80
    nodePort: 30080
  selector:
    app: frontend
