base/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-frontend-ts
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: letsencrypt-staging
spec:
  tls:
    - hosts:
        - danggamdong.kro.kr
  rules:
    - host: danggamdong.kro.kr
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: todo-frontend-ts
                port:
                  number: 80
